<?xml version="1.0" encoding="utf-8"?><!--Adapted From: https://sendbird.com/developer/tutorials/android-chat-tutorial-building-a-messaging-ui-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:clickable="false"
    android:contextClickable="false"
    android:foregroundTint="@color/white"
    android:longClickable="false">

    <TextView
        android:id="@+id/other_message_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_timestamp"
        android:textColor="#757575"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/other_message_text" />

    <TextView
        android:id="@+id/message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/sample_date"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_message_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_timestamp"
        android:textColor="#757575"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_message_text" />

    <TextView
        android:id="@+id/other_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/chatbub"
        android:maxWidth="260dp"
        android:paddingVertical="6dp"
        android:paddingLeft="14dp"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:text="@string/sample_message"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/my_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mebub"
        android:maxWidth="260dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingRight="13dp"
        android:text="@string/sample_message"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>